fixed img size on small devices

--- a/main.css
+++ b/main.css
@@ -186,6 +186,12 @@ ul {
     margin-bottom: 20em;
 }
 
+@media (max-width: 375px) {
+    .profile img {
+        width: 200px;
+    }
+}
+
 /* ------- Skills ------- */
 .skills {
     text-align: center;
